--- a/viz-a.ipynb
+++ b/viz-a.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "source": [
     "sns.get_dataset_names()"
    ],
@@ -59,7 +59,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 13
     }
    ],
    "metadata": {}
@@ -73,9 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "source": [
-    "planets = sns.load_dataset(\"planets\")"
+    "tips = sns.load_dataset(\"tips\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -89,21 +89,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "source": [
-    "planets.head(5)"
+    "tips"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "            method  number  orbital_period   mass  distance  year\n",
-       "0  Radial Velocity       1         269.300   7.10     77.40  2006\n",
-       "1  Radial Velocity       1         874.774   2.21     56.95  2008\n",
-       "2  Radial Velocity       1         763.000   2.60     19.84  2011\n",
-       "3  Radial Velocity       1         326.030  19.40    110.62  2007\n",
-       "4  Radial Velocity       1         516.220  10.50    119.47  2009"
+       "     total_bill   tip     sex smoker   day    time  size\n",
+       "0         16.99  1.01  Female     No   Sun  Dinner     2\n",
+       "1         10.34  1.66    Male     No   Sun  Dinner     3\n",
+       "2         21.01  3.50    Male     No   Sun  Dinner     3\n",
+       "3         23.68  3.31    Male     No   Sun  Dinner     2\n",
+       "4         24.59  3.61  Female     No   Sun  Dinner     4\n",
+       "..          ...   ...     ...    ...   ...     ...   ...\n",
+       "239       29.03  5.92    Male     No   Sat  Dinner     3\n",
+       "240       27.18  2.00  Female    Yes   Sat  Dinner     2\n",
+       "241       22.67  2.00    Male    Yes   Sat  Dinner     2\n",
+       "242       17.82  1.75    Male     No   Sat  Dinner     2\n",
+       "243       18.78  3.00  Female     No  Thur  Dinner     2\n",
+       "\n",
+       "[244 rows x 7 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -124,67 +132,134 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>method</th>\n",
-       "      <th>number</th>\n",
-       "      <th>orbital_period</th>\n",
-       "      <th>mass</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>year</th>\n",
+       "      <th>total_bill</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Radial Velocity</td>\n",
-       "      <td>1</td>\n",
-       "      <td>269.300</td>\n",
-       "      <td>7.10</td>\n",
-       "      <td>77.40</td>\n",
-       "      <td>2006</td>\n",
+       "      <td>16.99</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Radial Velocity</td>\n",
-       "      <td>1</td>\n",
-       "      <td>874.774</td>\n",
-       "      <td>2.21</td>\n",
-       "      <td>56.95</td>\n",
-       "      <td>2008</td>\n",
+       "      <td>10.34</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Radial Velocity</td>\n",
-       "      <td>1</td>\n",
-       "      <td>763.000</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>19.84</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>21.01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Radial Velocity</td>\n",
-       "      <td>1</td>\n",
-       "      <td>326.030</td>\n",
-       "      <td>19.40</td>\n",
-       "      <td>110.62</td>\n",
-       "      <td>2007</td>\n",
+       "      <td>23.68</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Radial Velocity</td>\n",
-       "      <td>1</td>\n",
-       "      <td>516.220</td>\n",
-       "      <td>10.50</td>\n",
-       "      <td>119.47</td>\n",
-       "      <td>2009</td>\n",
+       "      <td>24.59</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>29.03</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>27.18</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>22.67</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>17.82</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>18.78</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Thur</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>244 rows × 7 columns</p>\n",
        "</div>"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 19
     }
    ],
    "metadata": {}
